<resources>
    <string name="app_name">Mi Contador</string>
    <string name="menu_categories">Categorías</string>
    <string name="close_navigation_drawer">Cerrar navegación</string>
    <string name="open_navigation_drawer">Abrir navegación</string>
    <string name="title_activity_category_list">CategoryListActivity</string>
    <string name="action_settings">Settings</string>
    <string name="category">Categoría</string>
    <string name="save">Guardar</string>
    <string name="confirm_save_category">Categoría almacenada correctamente</string>
    <string name="confirm_update_category">Categoría actualizada correctamente</string>
    <string name="delete">Eliminar</string>
    <string name="confirm_delete_category">Categoría eliminada correctamente</string>
    <string name="msg_delete_confirm">¿Está seguro que desea eliminar?</string>
    <string name="income">Ingreso</string>
    <string name="expense">Gasto</string>
    <string name="not_elements">No hay elementos almacenados</string>
    <string name="image_description">Descripción</string>
    <string name="category_empty_name">Debe escribir un nombre para la categoría</string>
    <string name="category_empty_image">Debe seleccionar una imagen para la categoría</string>
    <string name="account_empty_image">Debe seleccionar una imagen para la cuenta</string>
    <string name="accounts">Cuentas</string>
    <string name="confirm_update_account">Cuenta actualizada correctamente</string>
    <string name="confirm_save_account">Cuenta almacenada correctamente</string>
    <string name="confirm_delete_account">Cuenta eliminada correctamente</string>

    <string name="not_accounts">No hay cuentas registradas</string>
    <string name="account">Cuenta</string>
    <string name="credit">Crédito</string>
    <string name="currency_symbol">$</string>
    <string name="credit_limit">Límite credito</string>
    <string name="court_day">Día de corte</string>
    <string name="limit_day">Día límite de pago</string>
    <string name="beginning_balance">Balance inicial</string>
    <string name="error_account_name">Debe de escribir un nombre para la cuenta</string>
    <string name="error_beginning_balance">Debe de agregar una cantidad inicial a la cuenta</string>
    <string name="error_court_day">Debe agregar la fecha de corte</string>
    <string name="error_limit_day">Debe agregar la fecha límite de pago</string>
    <string name="error_credit_limit">Debe agregar el límite de crédito</string>
    <string name="symbol">$</string>
    <string name="zero">0</string>
    <string name="point">.</string>
    <string name="double_zero">00</string>
</resources>
