<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="mx.shellcore.android.micontador.activities.AccountDetailActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/account_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/dummyView"
            android:layout_width="0dip"
            android:layout_height="0dip"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="horizontal" />

        <ImageView
            android:id="@+id/img_account"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/image_description"
            android:src="@drawable/ic_not_found" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/imageView"
            android:src="@drawable/ic_edit"
            android:background="@color/colorAccentTransparent"
            android:layout_alignBottom="@+id/img_account"
            android:layout_alignEnd="@+id/img_account" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/img_account"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/img_account">

            <EditText
                android:id="@+id/edt_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                android:hint="@string/account"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/text_dark" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/img_account"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/txt_currency_symbol"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:labelFor="@+id/edt_beginning_balance"
                android:text="@string/currency_symbol"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/text_dark" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="7">

                <EditText
                    android:id="@+id/edt_beginning_balance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/beginning_balance"
                    android:inputType="numberSigned"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/text_dark" />

            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/spn_currencies"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_weight="4" />

        </LinearLayout>

        <CheckBox
            android:id="@+id/chk_credit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/linearLayout"
            android:layout_marginTop="10dp"
            android:text="@string/credit"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:id="@+id/lin_credit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/chk_credit"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:labelFor="@+id/edt_credit_limit"
                    android:text="@string/currency_symbol"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/text_dark" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp">

                    <EditText
                        android:id="@+id/edt_credit_limit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/credit_limit"
                        android:inputType="numberSigned"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/text_dark" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:labelFor="@+id/edt_court_day"
                    android:text="@string/court_day"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/text_dark" />

                <EditText
                    android:id="@+id/edt_court_day"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"
                    android:textAlignment="center" />

                <LinearLayout
                    android:id="@+id/dummyView2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:labelFor="@+id/edt_limit_day"
                    android:text="@string/limit_day"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/text_dark" />

                <EditText
                    android:id="@+id/edt_limit_day"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"
                    android:textAlignment="center" />

                <LinearLayout
                    android:id="@+id/dummyView3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical" />

            </LinearLayout>

        </LinearLayout>



    </RelativeLayout>

</LinearLayout>
